added section for actors in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,8 @@ html
       ul 
         for name in showdata.developedBy
           li= name 
-          
+    h2 Starring 
+      ul 
+        for actors in showdata.starring 
+          li= actors 
+                
