--- a/views/index.pug
+++ b/views/index.pug
@@ -10,4 +10,9 @@ html
       ul 
         for actors in showdata.starring 
           li= actors 
-                
+    h2 Seasons 
+      ul 
+        for season in showdata.seasons 
+          li 
+            a(href=`/season/${season.number}`)= `Season ${season.number}`
+                       
