--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,3 +13,10 @@ a:visited {
   color: aqua;
   text-decoration: none;
 }
+
+.season {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
