--- a/views/season.pug
+++ b/views/season.pug
@@ -1,7 +1,7 @@
 html 
   include partials/head
   body 
-    h1 title 
+    h1= title 
     div(class="season")= `Season ${season.number}`
 
     table 
@@ -11,8 +11,8 @@ html
         th Directior 
       for episode in season.episodes 
         tr 
-          td= episode.number 
-          td= episode.title 
-          td= episode.director 
+          td(class="number")= episode.number 
+          td(class="title")= episode.title 
+          td(class="director")= episode.director 
         tr 
           td(colspan=3)= episode.synopsis 
